--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -15,6 +15,7 @@
         <module>stats-client</module>
         <module>stats-dto</module>
         <module>stats-service</module>
+        <module>ewe</module>
     </modules>
 
     <properties>
