--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -15,7 +15,6 @@
         <module>stats-client</module>
         <module>stats-dto</module>
         <module>stats-service</module>
-        <module>ewe</module>
     </modules>
 
     <properties>
@@ -23,5 +22,13 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
