--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,19 +1,18 @@
-main.port=8080
-
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+# Server Configuration
+server.port=8080
+stats.server.url=${STATS_SERVER_URL}
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
 spring.sql.init.mode=always
-
-#---
+# DataSource
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=${MAIN_DB}
-spring.datasource.username=${MAIN_USER}
-spring.datasource.password=${MAIN_PASSWORD}
-
-#---
-spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:ewm_db
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# Logging
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.transaction=INFO
+logging.level.org.springframework.transaction.interceptor=DEBUG
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=INFO
