--- a/stats/stats-service/Dockerfile
+++ b/stats/stats-service/Dockerfile
@@ -1,4 +1,6 @@
-FROM ubuntu:latest
+FROM eclipse-temurin:21-jre-jammy
 LABEL authors="egopv"
-
-ENTRYPOINT ["top", "-b"]
+VOLUME /tmp
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} app.jar
+ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -jar /app.jar"]
