--- a/main-service/src/main/resources/application-test.properties
+++ b/main-service/src/main/resources/application-test.properties
@@ -1,3 +1,4 @@
+stats-service.url=http://localhost:9090
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
