--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Server Configuration
 server.port=8080
-stats.server.url=${STATS_SERVER_URL}
+stats-service.url=${STATS_SERVER_URL:http://localhost:9090}
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.format_sql=true
