--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Server Configuration
 server.port=8080
+server.address=0.0.0.0
 stats-service.url=${STATS_SERVER_URL:http://localhost:9090}
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=validate
