--- a/stats/stats-service/src/main/resources/application-test.properties
+++ b/stats/stats-service/src/main/resources/application-test.properties
@@ -1,4 +1,5 @@
 # JPA / Hibernate
+server.port=9090
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
